dev_animate_clock

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         <span class="title--big">LOREM IPSUM</span>
         <span class="dev">ios&android app development</span>
     </div>
+    <div class="clock">
+      <div class="minutes-container">
+        <div class="minutes"></div>
+      </div>
+      <div class="seconds-container">
+        <div class="seconds"></div>
+      </div>
+    </div>
 </section>
 <section data-role="section" class="section-section2">
     <div class="making-text">
@@ -75,7 +83,7 @@
     <div class="vert-line--left vert-line"></div>
 </section>
 <section data-role="section" class="section-section9">
-   
+
     <div class="block-professional">
         PROFESSIONAL <span class="color--dark">MANAGERS</span>
     </div>
