--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ $(document).ready(function(){
     var elem = $(this).width();
     var result = (elem / 2) - 11;
     console.log(result);
-    $(".clock").css("left", "+="+result);
+    $(".clock").css("left", "="+result);
   });
 });
 </script>
