--- a/index.html
+++ b/index.html
@@ -229,10 +229,10 @@ $('.bxslider').bxSlider({
 });
 $(document).ready(function(){
   $(window).on('load resize',function(){
-    var elem = $(this).width();
-    var result = (elem / 2) - 11;
+    var bodyWidth = $(this).width();
+    var result = (bodyWidth/2)-13;
     console.log(result);
-    $(".clock").css("left", "="+result);
+    $(".clock").css("left", result);
   });
 });
 </script>
