--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </section>
 <section data-role="section" class="section-section2">
     <div class="making-text">
-        BEST DECISION FOR<br/> MAKING YOUR APP REAL<br/> IS TO <span class="color--main">HIRE US</span>!
+        BEST DECISION FOR<br/> MAKING YOUR APP REAL<br/> IS TO <a href="" onclick="return false"><span class="color--main back-end">HIRE US</span></a>!
     </div>
 </section>
 <section data-role="section" class="section-section3">
@@ -205,7 +205,7 @@ By dropping a pin on a map of the world, or setting your preference to a specifi
 <div class="horizon-next"><img src="img/arrows-right.png"></div>
 
 <script>
-$('section').horizon({scrollDuration: 500});
+$('section').horizon({scrollDuration: 1500});
 $('.back-end').on('click', function () {
     $(document).horizon('scrollTo', 12);
 });
