--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@ By dropping a pin on a map of the world, or setting your preference to a specifi
        <h2>CONTACT US</h2>
         <div class="form">
             <form action="">
-                <input type="text" placeholder="name">
-                <input type="email" placeholder="email">
-                <textarea placeholder="message"></textarea>
+                <input type="text" placeholder="name" required="">
+                <input type="email" placeholder="email" required="">
+                <textarea placeholder="message" required=""></textarea>
                 <input type="submit" value="send" class="submit--float">
             </form>
         </div>
